--- a/app/src/main/res/layout/activity_option0.xml
+++ b/app/src/main/res/layout/activity_option0.xml
@@ -26,6 +26,27 @@
         android:hint="@string/et_input_hint"
         android:layout_marginBottom="@dimen/small_spacing" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="179dp"
+            android:layout_height="wrap_content"
+            android:textSize="32sp"
+            android:text="Back" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:textSize="32sp"
+            android:text="Next" />
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/btn_process_0"
         android:layout_width="match_parent"
@@ -43,5 +64,6 @@
         android:text="@string/tv_output_init"
         android:textAppearance="@style/text_title"
         android:background="@color/colorAccent"/>
+
 
 </LinearLayout>
