--- a/app/src/main/res/layout/activity_option0.xml
+++ b/app/src/main/res/layout/activity_option0.xml
@@ -32,6 +32,7 @@
 
 
         <Button
+            android:onClick="process"
             android:id="@+id/button2"
             android:layout_width="179dp"
             android:layout_height="wrap_content"
@@ -39,6 +40,7 @@
             android:text="Back" />
 
         <Button
+            android:onClick="process"
             android:id="@+id/button"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
